--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,7 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -36,3 +33,27 @@
     transform: rotate(360deg);
   }
 }
+
+h1{
+  padding: 5%;
+}
+
+div{
+  margin: auto;
+  }
+
+  .Form{
+    display: flexbox;
+    float: left;
+    margin: auto;
+    align-items: center;
+    position: relative;
+    padding: 20px;
+
+  }
+  input{
+    display: flex;
+  }
+  button{
+    display: flex;
+  }
