--- a/src/App.css
+++ b/src/App.css
@@ -91,3 +91,9 @@ background-repeat: no-repeat;
 background-size: cover;
 opacity: 2;
 }
+img{
+  width: 90px;
+  height: 45px;
+  padding-right: 20px;
+  opacity: 5;
+}
