--- a/src/App.css
+++ b/src/App.css
@@ -64,11 +64,14 @@ div{
   background-color: hsl(0, 2%, 12%);
   padding: 10px;
   font-weight: bold;
-  padding-bottom: 10px;
   opacity: 0.8;
+  
 }
 a {
+  font: bold;
+  color:rgb(107, 107, 247);
   margin-right: 15px;
+  margin-top: 10px;
 }
 
 a:hover {
@@ -82,7 +85,7 @@ button {
   border: 2px solid rgb(31, 39, 46);
   border-radius: 5px;
   cursor: pointer;
-  margin-left: 8em;
+  margin-left: 3em;
 }
 
 body{
@@ -96,4 +99,18 @@ img{
   height: 45px;
   padding-right: 20px;
   opacity: 5;
+}
+form{
+  margin-top: 30px;
+  margin-left: 400px;
+  
+}
+input{
+  width: 25%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+button:hover{
+  color: cyan;
+  background-color: blue;
 }
